jupyterlab/jupyterlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  labels:
    name: jupyterlab
spec:
  ports:
    - name: jupyterlab-web
      port: 8888
      targetPort: 8888
  selector:
    name: jupyterlab
