jupyterlab/ingress-app-root.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/app-root: /nb
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /nb
        pathType: Prefix
        backend:
          service:
            name: jupyterlab
            port:
              number: 8888
